Improvements to solr, tomcat and index-node

--- a/index-node/Dockerfile
+++ b/index-node/Dockerfile
@@ -1,19 +1,14 @@
 # ESGF index node:  esgf-search application running inside Tomcat
 
-ARG ESGF_IMAGES_HUB=esgfhub
-ARG ESGF_VERSION=devel
-FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
+ARG ESGF_TOMCAT_VERSION=latest
+FROM cedadev/esgf-tomcat:$ESGF_TOMCAT_VERSION
+
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
-ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
-ADD $ESGF_REPO/dist/esg-search/esg-search.war /usr/local/tomcat/webapps/esg-search/
+# Download and install esg-search war
+ARG ESGF_DIST_URL=http://dist.ceda.ac.uk/esgf/dist
+ENV ESGF_REPO $ESGF_DIST_URL
+RUN curl -o $CATALINA_HOME/webapps/esg-search.war -sSL $ESGF_REPO/esg-search/esg-search.war
 
-#COPY esg-search.war /usr/local/tomcat/webapps/.
-RUN cd /usr/local/tomcat/webapps/esg-search/ && \
-    jar xvf esg-search.war && \
-    rm esg-search.war && \
-    chown -R tomcat:tomcat /usr/local/tomcat/webapps/esg-search
-
-COPY scripts/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-COPY scripts/process_esgf_config_archive.sh /usr/local/bin/process_esgf_config_archive.sh
-ENTRYPOINT /usr/local/bin/docker-entrypoint.sh
+# Install environment customisations
+COPY scripts/setenv.sh $CATALINA_HOME/bin/setenv.sh
