--- a/slcs/conf/onlineca.ini
+++ b/slcs/conf/onlineca.ini
@@ -16,10 +16,10 @@ onlineca.server.ca_class_factory_path: contrail.security.onlineca.server.impl:Ce
 # ca.impl.CertificateAuthority class
 
 # CA certificate file location
-onlineca.server.ca_class.cert_filepath: {{ application_home }}/conf/ca/onlineca.crt
+onlineca.server.ca_class.cert_filepath: @@ONLINECA_CERT_FILEPATH@@
 
 # CA certificate private key file location
-onlineca.server.ca_class.key_filepath: {{ application_home }}/conf/ca/onlineca.key
+onlineca.server.ca_class.key_filepath: @@ONLINECA_KEY_FILEPATH@@
 
 # Password for CA private key file.  Omit this option if no password is set
 #onlineca.server.ca_class.key_passwd:
@@ -35,7 +35,7 @@ onlineca.server.min_key_nbits: 2048
 
 # Template to set the form for the certificate subject name for output
 # certificates.  This can reference any key name set in environ.
-onlineca.server.cert_subject_name_template: "/DC=esgf/CN=$OPENID"
+onlineca.server.cert_subject_name_template: @@ONLINECA_CERT_SUBJECT_TEMPLATE@@
 
 # URI path for certificate issuing endpoint. e.g. if online ca app is mounted
 # at https://myonlineca.somewhere.ac.uk/onlineca and issue_cert_uripath is
@@ -53,7 +53,7 @@ onlineca.server.cert_subject_name_template: "/DC=esgf/CN=$OPENID"
 # Directory where trustroots should be read from and returned via the
 # trustroots call.  It is vital that this is path is carefully selected and
 # checked.
-onlineca.server.trustroots_dir: {{ application_home }}/conf/ca/trustroots
+onlineca.server.trustroots_dir: @@ONLINECA_TRUSTROOTS_DIR@@
 
 # Comma delimited list of PEM-encoded certificate files corresponding to
 # CA trustroot files to be returned in the certificate issuing response.  These
@@ -61,4 +61,4 @@ onlineca.server.trustroots_dir: {{ application_home }}/conf/ca/trustroots
 # and may be useful where the client's trust roots do not contain the complete
 # chain of trust from the newly issued cert and a root certificate.  This
 # option does not apply if the CA for this service is itself a root CA.
-{{ onlineca_cacert_chain_filepaths }}
+# onlineca.server.cacert_chain_filepaths: @@ONLINECA_CACERT_CHAIN_FILEPATHS@@
