--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -109,7 +109,12 @@ WSGISocketPrefix run/wsgi
   ProxyPassReverse /esgf-slcs http://esgf-slcs:5000 timeout=600
   ProxyPass /slcs-static http://slcs-nginx timeout=600
   ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
-
+  
+  # proxy requests for visus web viewer
+  ProxyPass /visusviewer http://visus-server timeout=600
+  ProxyPassReverse /visusviewer http://visus-server timeout=600
+  RewriteRule (.*/visusviewer) https://%{HTTP_HOST}%{REQUEST_URI}/viewer.html [R,L]
+  
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
   WSGIScriptAlias /esgf-nm /usr/local/esgf-node-manager/src/python/server/nodemgr/apache/wsgi.py
