--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -416,6 +416,17 @@ services:
       replicas: 1
       placement:
         constraints: [node.labels.esgf_idp_node == true]
+        
+  visus-server:
+    container_name: visus-server
+    image: visus/visus
+    networks:
+      - default
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.esgf_front_node == true]
 
   # useful visualizer container, not really needed
   visualizer:
