--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -81,6 +81,10 @@ WSGISocketPrefix run/wsgi
   RequestHeader set SSL_CLIENT_I_DN "%{SSL_CLIENT_I_DN}s"
   RequestHeader set SSL_SERVER_S_DN_OU "%{SSL_SERVER_S_DN_OU}s"
   RequestHeader set SSL_CLIENT_VERIFY "%{SSL_CLIENT_VERIFY}s"
+  
+  # RewriteRules
+  RewriteEngine On
+  RewriteRule ^/visusviewer$ https://%{HTTP_HOST}%{REQUEST_URI}/viewer.html [R]
 
   # proxy requests to Jetty
   ProxyPassMatch  ^/solr(.*)$     http://esgf-solr:8983/solr$1
@@ -113,7 +117,8 @@ WSGISocketPrefix run/wsgi
   # proxy requests for visus web viewer
   ProxyPass /visusviewer http://visus-server timeout=600
   ProxyPassReverse /visusviewer http://visus-server timeout=600
-  RewriteRule (.*/visusviewer) https://%{HTTP_HOST}%{REQUEST_URI}/viewer.html [R,L]
+  ProxyPass /mod_visus http://visus-server/mod_visus timeout=600
+  ProxyPassReverse /mod_visus http://visus-server/mod_visus timeout=600
   
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
