--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,327 +11,200 @@
 #       example: export ESGF_VERSION=1.0
 # ESGF_DATA_DIR: root of ESGF data directories
 
-version: '2.1'
+version: '3.4'
 
-networks:
-  # network to keep postgres database isolated
-  dbnetwork:
 
 services:
-
-  # data container holding site-specific ESGF configuration
-  # this container stops after the volumes are initialized
-  # only include configuration common to more than one container
-  esgf-config:
-    image: centos:6
-    container_name: esgf-config
+  esgf-proxy:
+    image: cedadev/esgf-proxy
+    build: ./proxy
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
-     - $ESGF_CONFIG/httpd/certs/:/etc/certs/
-     - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
-     - $ESGF_CONFIG/archives/grid_security_certs.tar.xz:/root/archives/grid_security_certs.tar.xz
-     - $ESGF_CONFIG/archives/esgf_config.tar.xz:/root/archives/esgf_config.tar.xz
+      - "$ESGF_CONFIG/hostcert:/etc/nginx/ssl"
+    environment:
+      ESGF_HOSTNAME: ${ESGF_HOSTNAME}
+      ESGF_SOLR_INTERNAL_URL: http://esgf-solr:8983
+      ESGF_INDEX_NODE_INTERNAL_URL: http://esgf-index-node:8080
+      ESGF_TDS_INTERNAL_URL: http://esgf-tds:8080
+      ESGF_ORP_INTERNAL_URL: http://esgf-orp:8080
+      ESGF_IDP_INTERNAL_URL: http://esgf-idp:8080
+      ESGF_SLCS_INTERNAL_URL: http://esgf-slcs:8000
+      ESGF_AUTH_INTERNAL_URL: http://esgf-auth:8000
+      ESGF_COG_INTERNAL_URL: http://esgf-cog:8000
 
-  # ESGF postgres database
+#  esgf-solr:
+#    image: cedadev/esgf-solr
+#    ports:
+#      - "8983:8983"
+#    environment:
+#      SOLR_HEAP: 1g
+#    volumes:
+#      - "solr-data:/esg/solr-data"
+
+#  esgf-orp:
+#    image: cedadev/esgf-orp
+#    ports:
+#      - "8081:8080"
+#    environment:
+#      ESGF_KEYSTORE_ALIAS: my_esgf_node
+#      ESGF_KEYSTORE_PASSWORD: "Password123"
+#    depends_on:
+#      - esgf-tomcat
+
+#  esgf-index-node:
+#    image: cedadev/esgf-index-node
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      ESGF_SOLR_URL: http://esgf-solr:8983/solr
+#      ESGF_ORP_URL: http://localhost:8081
+#    depends_on:
+#      - esgf-tomcat
+#      - esgf-solr
+#      - esgf-orp
+
   esgf-postgres:
-     image: esgfhub/esgf-postgres:${ESGF_VERSION}
-     expose:
-       - "5432"
-     ports:
-       - "5432:5432"
-     container_name: postgres
-     networks:
-       - dbnetwork
-     volumes:
-       - pg_data:/var/lib/pgsql/data
-
-  # ESGF Openid Relying Party
-  esgf-orp:
-    image: esgfhub/esgf-orp:${ESGF_VERSION}
-    container_name: orp
-    expose:
-      - "8080"
-      - "8443"
-    ports:
-      - "8083:8080"
-      - "8446:8443"
-    networks:
-      - default
-    volumes_from:
-      - esgf-config
+    image: cedadev/esgf-postgres
+    build: ./postgres
+    restart: "no"
     environment:
-     - ESGF_HOSTNAME
-
-  # THREDDS Data Server
-  esgf-tds:
-    image: esgfhub/esgf-tds:${ESGF_VERSION}
-    container_name: tds
-    expose:
-      - "8080"
-      - "8443"
-    ports:
-      - "8084:8080"
-      - "8447:8443"
-    networks:
-      - default
-      - dbnetwork
+      DBSUPER_PASSWORD: "dbsuper123"
+      ESGCET_PASSWORD: "esgcet123"
     volumes:
-      - tds_data:/esg/content/thredds
-      - $ESGF_CONFIG/webapps/thredds/WEB-INF/web.xml:/usr/local/tomcat/webapps/thredds/WEB-INF/web.xml
-      - $ESGF_DATA_DIR:/esg/data
-    volumes_from:
-      - esgf-config
-    environment:
-     - ESGF_HOSTNAME
-    depends_on:
-      - esgf-postgres
+      - "postgres-data:/var/lib/pgsql/data"
 
-  # ESGF Publisher Client
-  esgf-publisher:
-    image: esgfhub/esgf-publisher:${ESGF_VERSION}
-    container_name: publisher
-    networks:
-      - default
-      - dbnetwork
-    volumes:
-      - tds_data:/esg/content/thredds
-      - $ESGF_DATA_DIR:/esg/data
-    volumes_from:
-      - esgf-config
-    environment:
-     - SSL_CERT_DIR=/etc/grid-security/certificates
-     #- SSL_CERT_FILE=/etc/certs/esgf-ca-bundle.crt
-     - ESGF_HOSTNAME
-    depends_on:
-      - esgf-postgres
+#  esgf-idp-node:
+#    image: cedadev/esgf-idp-node
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      ESGF_IDP_URL: http://localhost:8081
+#      ESGF_DB_HOST: esgf-postgres
+#      ESGF_DB_PASSWORD: "Password123"
+#      ESGF_SLCS_URL: http://localhost:8000
+#    depends_on:
+#      - esgf-tomcat
+#      - esgf-postgres
 
-  # ESGF Dashboard
-  esgf-dashboard:
-    image: esgfhub/esgf-dashboard:${ESGF_VERSION}
-    container_name: dashboard
-    networks:
-      - default
-      - dbnetwork
-    volumes_from:
-      - esgf-config
-    ports:
-      - "8085:8080"
-      - "8448:8443"
-    depends_on:
-      - esgf-postgres
+  # Build dependency only
+  esgf-django:
+    image: cedadev/esgf-django
+    build: ./django
+    # Use an entrypoint that exits immediately with success
+    entrypoint: ["true"]
 
-  # ESGF-Auth client
-  esgf-auth:
-    image: esgfhub/esgf-auth:${ESGF_VERSION}
-    container_name: esgf-auth
-    volumes:
-      - esgf_auth_install:/usr/local/esgf-auth
-
-  # ESGF Identity Provider
-  esgf-idp-node:
-    image: esgfhub/esgf-idp-node:${ESGF_VERSION}
-    container_name: idp-node
-    expose:
-      - "8080"
-      - "8443"
-    ports:
-      - "8082:8080"
-      - "8445:8443"
-    networks:
-      - default
-      - dbnetwork
-    volumes_from:
-      - esgf-config
-    depends_on:
-      - esgf-postgres
-
-  # Solr engine running within Jetty
-  esgf-solr:
-    image: esgfhub/esgf-solr:${ESGF_VERSION}
-    container_name: solr
-    expose:
-      - "8983"
-      - "8984"
-    ports:
-      - "8983:8983"
-      - "8984:8984" 
-    volumes:
-      - solr_data:/esg/solr-index
-    volumes_from:
-      - esgf-config
-    networks:
-      - default
-
-  # ESGF Index Node
-  # note the non-standard ports used on the host
-  # (since the standard ports are used by the data-node service)
-  esgf-index-node:
-    image: esgfhub/esgf-index-node:${ESGF_VERSION}
-    container_name: index-node
-    expose:
-      - "8080"
-      - "8443"
-    ports:
-      - "8081:8080"
-      - "8444:8443"
-    depends_on:
-      - esgf-solr
-    volumes_from:
-      - esgf-config
-    networks:
-      - default
-
-  # CoG
-  # data container to hold CoG source code and python virtual environment
-  # this container stops after the volume 'cog_data' is initialized
   esgf-cog:
-     image: esgfhub/esgf-cog:${ESGF_VERSION}
-     container_name: cog
-     expose:
-       - "8000"
-     ports:
-       - "8000:8000"
-     volumes:
-       - cog_data:/usr/local/cog/cog_config
-     volumes_from:
-      - esgf-config
-     #command: $ESGF_HOSTNAME true true # ESGF=true, keep django server runnining on port 8000
-     command: $ESGF_HOSTNAME true false # ESGF=false, django server running on port 8000 = false
-     depends_on:
-       - esgf-postgres
-     networks:
-       - dbnetwork
-     environment:
-       - COG_DIR=/usr/local/cog
-       - COG_INSTALL_DIR=/usr/local/cog/cog_install
-       - COG_CONFIG_DIR=/usr/local/cog/cog_config
-       - ESGF_HOSTNAME
-       # flag to execute CoG initialization, defaults to true, may be overridden from shell environment before starting docker-compose
-       - ${INIT:-true}
-
-  esgf-httpd:
-   image: esgfhub/esgf-httpd:${ESGF_VERSION}
-   container_name: httpd
-   entrypoint: /usr/local/bin/docker-entrypoint.sh
-   volumes:
-     - cog_data:/usr/local/cog/cog_config
-     - esgf_auth_install:/usr/local/esgf-auth
-     - $ESGF_CONFIG/esgf-auth/settings.py:/usr/local/esgf-auth/src/esgf-auth/esgf_auth/settings.py
-   # - $ESGF_CONFIG/esgf-auth/db.sqlite3:/tmp/db.sqlite3
-   volumes_from:
-     - esgf-config
-     - esgf-cog
-   # - esgf-node-manager
-   # - esgf-data-node
-   environment:
-     - SSL_CERT_DIR=/etc/grid-security/certificates
-     - SSL_CERT_FILE=/etc/certs/esgf-ca-bundle.crt
-     - COG_CONFIG_DIR=/usr/local/cog/cog_config
-     - ESGF_HOSTNAME
-   ports:
-     - "80:80"
-     - "443:443"
-   depends_on:
-     - esgf-cog
-     - esgf-auth
-   #  - esgf-node-manager
-   healthcheck:
-     test: 'curl --fail "https://${ESGF_HOSTNAME}/" || exit 1'
-   # httpd URLs must use hostname=$ESGF_HOSTNAME
-   networks:
-     default:
-       aliases:
-         - "${ESGF_HOSTNAME}"
-     dbnetwork: {}
-
-  esgf-node-manager:
-   image: esgfhub/esgf-node-manager:${ESGF_VERSION}
-   container_name: node-manager
-   volumes_from:
-     - esgf-config
-   environment:
-     - SSL_CERT_DIR=/etc/grid-security/certificates
-     - SSL_CERT_FILE=/etc/certs/esgf-ca-bundle.crt
-     - ESGF_HOSTNAME
-   depends_on:
-     - esgf-postgres
-   networks:
-     default: {}
-     dbnetwork: {}
-
-  esgf-slcs:
-    command: ["-sn", "$ESGF_HOSTNAME", "-ds", "rootAdmin", "-sdn", "slcs", "-sdh", "slcs-postgres", "-sdu", "dbsuper", "-udn", "esgcet", "-udh", "esgf-postgres", "-udu", "dbsuper", "--static-url", "https://$ESGF_HOSTNAME/slcs-static/", "--url-prefix", "esgf-slcs", "--use-x-forwarded-host"]
-    container_name: esgf-slcs
-    depends_on:
-      - slcs-postgres
-      - slcs-nginx
-      - esgf-postgres
-    expose:
-      - "5000"
-    image: esgfhub/esgf-slcs:${ESGF_VERSION}
-    networks:
-      - default
-      - dbnetwork
-    ports:
-      - "5000:5000"
-    volumes:
-      - slcs_static_web:/var/www/static
-      - $ESGF_CONFIG/slcs/conf/db/:/usr/local/esgf-slcs-server/conf/db
-      - $ESGF_CONFIG/slcs/conf/ca/:/usr/local/esgf-slcs-server/conf/ca
-
-  slcs-nginx:
-    container_name: slcs-nginx
-    expose:
-      - "443"
-      - "80"
-    image: nginx
-    networks:
-      - default
-      - dbnetwork
-    volumes:
-      - "slcs_static_web:/usr/share/nginx/html"
-      - "$ESGF_CONFIG/slcs/conf/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
-
-  slcs-postgres:
-    container_name: slcs-postgres
+    image: cedadev/esgf-cog
+    build: ./cog
     environment:
-      - POSTGRES_PASSWORD=changeit
-      - POSTGRES_USER=dbsuper
-      - POSTGRES_DB=slcs
-      - POSTGRES_INITDB_ARGS=--encoding=UTF-8
-    expose:
-      - 5432
-    image: postgres
-    networks:
-      - default
-      - dbnetwork
+      ESGF_COG_DOMAIN: ${ESGF_HOSTNAME}
+      ESGF_COG_TIME_ZONE: "Europe/London"
+      ESGF_COG_SECRET_KEY: "djangosecretkeyforcog"
+      ESGF_COG_DATABASE_HOST: esgf-postgres
+      ESGF_COG_DATABASE_PASSWORD: "dbsuper123"
+      ESGF_SEARCH_URL: https://${ESGF_HOSTNAME}
+      ESGF_IDP_URL: https://${ESGF_HOSTNAME}
+      ESGF_ROOTADMIN_PASSWORD: "rootadmin123"
+    depends_on:
+      - esgf-django  # Build dependency
+      - esgf-postgres
 
-  # FTP server
-  #esgf-ftp:
-  # image: esgfhub/esgf-vsftp:${ESGF_VERSION}
-  # container_name: ftp 
-  # ports:
-  #   - "20:20"
-  #   - "21:21"
-  #   - "12020-12025:12020-12025" 
-  # networks:
-  #   - default
-  # volumes:
-  #   - $ESGF_DATA_DIR:/var/ftp/pub
-   
+#  esgf-slcs-postgres:
+#    image: postgres
+#    environment:
+#      POSTGRES_USER: slcsuser
+#      POSTGRES_PASSWORD: "Password456"
+#      POSTGRES_DB: slcs
+#      POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
+#    volumes:
+#      - "slcs-postgres-data:/var/lib/postgresql/data"
 
-# use Docker volumes to store persistent data
-# (which survives when the containers are removed)
+  # This container sets up a self-signed CA in the slcs-certificate-authority volume
+#  esgf-slcs-self-signed-ca:
+#    image: centos:6
+#    command:
+#      - bash
+#      - -c
+#      - |
+#        set -ex
+#        # Create the CA if it doesn't exist
+#        if [ ! -f "/ca/onlineca.pem" ]; then
+#            # Otherwise, create the certificate
+#            openssl req -new -nodes -x509 -subj "$$CA_CERT_SUBJECT" -days 3650 \
+#              -keyout "/ca/onlineca.key" \
+#              -out "/ca/onlineca.pem" -extensions v3_ca
+#        fi
+#        # Make the key readable by the Django user only (uid 1001)
+#        chmod 400 /ca/onlineca.key
+#        chown 1001:1001 /ca/onlineca.key
+#        # Create an empty trustroots directory
+#        mkdir -p /ca/trustroots
+#    environment:
+#      CA_CERT_SUBJECT: /DC=esgf/CN=localhost
+#    volumes:
+#      - "slcs-certificate-authority:/ca"
+
+#  esgf-slcs:
+#    image: cedadev/esgf-slcs
+#    ports:
+#      - "8000:8000"
+#    environment:
+      # Generic Django settings
+      #SCRIPT_NAME: /esgf-slcs
+#      DJANGO_SESSION_COOKIE_SECURE: "0"
+#      DJANGO_CSRF_COOKIE_SECURE: "0"
+#      DJANGO_ALLOWED_HOSTS: localhost
+#      DJANGO_SECRET_KEY: mysecretkey
+      # SLCS database
+#      DJANGO_DATABASE_DEFAULT_ENGINE: django.db.backends.postgresql
+#      DJANGO_DATABASE_DEFAULT_NAME: slcs
+#      DJANGO_DATABASE_DEFAULT_HOST: esgf-slcs-postgres
+#      DJANGO_DATABASE_DEFAULT_PORT: "5432"
+#      DJANGO_DATABASE_DEFAULT_USER: slcsuser
+#      DJANGO_DATABASE_DEFAULT_PASSWORD: "Password456"
+      # ESGF User database
+#      DJANGO_DATABASE_USERDB_ENGINE: django.db.backends.postgresql
+#      DJANGO_DATABASE_USERDB_NAME: esgcet
+#      DJANGO_DATABASE_USERDB_HOST: esgf-postgres
+#      DJANGO_DATABASE_USERDB_PORT: "5432"
+#      DJANGO_DATABASE_USERDB_USER: dbsuper
+#      DJANGO_DATABASE_USERDB_PASSWORD: "Password123"
+      # Other SLCS-specific settings
+#      ESGF_SLCS_URL: http://localhost:8000
+#      ESGF_SLCS_BASIC_AUTH_REALM: localhost
+#      ONLINECA_CERT_SUBJECT_TEMPLATE: /DC=esgf/CN=$$OPENID
+#      ONLINECA_CERT_FILEPATH: /opt/onlineca/ca/onlineca.pem
+#      ONLINECA_KEY_FILEPATH: /opt/onlineca/ca/onlineca.key
+#      ONLINECA_TRUSTROOTS_DIR: /opt/onlineca/ca/trustroots
+#    volumes:
+#      - "slcs-certificate-authority:/opt/onlineca/ca:ro"
+#    depends_on:
+#      - esgf-django  # Build dependency
+#      - esgf-postgres
+#      - esgf-slcs-postgres
+#      - esgf-slcs-self-signed-ca
+
+
+# Use Docker volumes to store persistent data
 volumes:
+#  solr-data:
+  postgres-data:
+#  slcs-postgres-data:
+#  slcs-certificate-authority:
+
   # postgres data and configuration
-  pg_data:
+  #pg_data:
   # cog data directory
-  cog_data:
+  #cog_data:
   # contains Solr index data
-  solr_data:
+  #solr_data:
   # contains TDS configuration, catalogs, cache, and logs
   # (directory below -Dtds.content.root.path=/esg/content)
-  tds_data:
+  #tds_data:
   # static web files for SLCS server
-  slcs_static_web:
+  #slcs_static_web:
   # esgf-auth installation directory, including python virtual environment
-  esgf_auth_install:
+  #esgf_auth_install:
