--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -15,12 +15,12 @@ server {
     proxy_set_header  X-Forwarded-Proto $scheme;
 
     # Proxy some specific requests that are allowed for plain HTTP
-#    location /solr {
-#        proxy_pass ${ESGF_SOLR_INTERNAL_URL};
-#    }
-#    location /esg-search {
-#        proxy_pass ${ESGF_INDEX_NODE_INTERNAL_URL};
-#    }
+    location /solr {
+        proxy_pass ${ESGF_SOLR_INTERNAL_URL};
+    }
+    location /esg-search {
+        proxy_pass ${ESGF_INDEX_NODE_INTERNAL_URL};
+    }
 #    location /thredds {
 #        proxy_pass ${ESGF_TDS_INTERNAL_URL};
 #    }
@@ -70,18 +70,18 @@ server {
     location / {
         proxy_pass ${ESGF_COG_INTERNAL_URL};
     }
-#    location /solr {
-#        proxy_pass ${ESGF_SOLR_INTERNAL_URL};
-#    }
+    location /solr {
+        proxy_pass ${ESGF_SOLR_INTERNAL_URL};
+    }
 #    location /esg-orp {
 #        proxy_pass ${ESGF_ORP_INTERNAL_URL};
 #    }
 #    location /esgf-idp {
 #        proxy_pass ${ESGF_IDP_INTERNAL_URL};
 #    }
-#    location /esg-search {
-#        proxy_pass ${ESGF_INDEX_NODE_INTERNAL_URL};
-#    }
+    location /esg-search {
+        proxy_pass ${ESGF_INDEX_NODE_INTERNAL_URL};
+    }
 #    location /thredds {
 #        proxy_pass ${ESGF_TDS_INTERNAL_URL};
 #    }
