--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -76,9 +76,9 @@ server {
 #    location /esg-orp {
 #        proxy_pass ${ESGF_ORP_INTERNAL_URL};
 #    }
-#    location /esgf-idp {
-#        proxy_pass ${ESGF_IDP_INTERNAL_URL};
-#    }
+    location /esgf-idp {
+        proxy_pass ${ESGF_IDP_INTERNAL_URL};
+    }
     location /esg-search {
         proxy_pass ${ESGF_INDEX_NODE_INTERNAL_URL};
     }
