--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,6 @@ version: '3.4'
 
 
 services:
-  # Build dependency only
-  esgf-configure:
-    image: cedadev/esgf-configure
-    build: ./configure
-    # Use an entrypoint that exits immediately with success
-    entrypoint: ["true"]
-
   esgf-proxy:
     image: cedadev/esgf-proxy
     build: ./proxy
@@ -41,6 +34,15 @@ services:
       ESGF_SLCS_INTERNAL_URL: http://esgf-slcs:8000
       ESGF_AUTH_INTERNAL_URL: http://esgf-auth:8000
       ESGF_COG_INTERNAL_URL: http://esgf-cog:8000
+    depends_on:
+      - esgf-solr
+      - esgf-index-node
+#      - esgf-tds
+#      - esgf-orp
+      - esgf-idp-node
+#      - esgf-slcs
+#      - esgf-auth
+      - esgf-cog
 
   # Zookeeper is not replicated (yet), but is used to store solr config
   esgf-zookeeper:
@@ -81,38 +83,6 @@ services:
     depends_on:
       - esgf-zookeeper
 
-  # Build dependency only
-  esgf-tomcat:
-    image: cedadev/esgf-tomcat
-    build: ./tomcat
-    # Use an entrypoint that exits immediately with success
-    entrypoint: ["true"]
-
-#  esgf-orp:
-#    image: cedadev/esgf-orp
-#    ports:
-#      - "8081:8080"
-#    environment:
-#      ESGF_KEYSTORE_ALIAS: my_esgf_node
-#      ESGF_KEYSTORE_PASSWORD: "Password123"
-#    depends_on:
-#      - esgf-tomcat
-
-  esgf-index-node:
-    image: cedadev/esgf-index-node
-    build: ./index-node
-    restart: "no"
-    environment:
-      ESGF_HOSTNAME:
-      ESGF_DATABASE_HOST: esgf-postgres
-      ESGF_DATABASE_PASSWORD: "dbsuper123"
-      ESGF_SOLR_INTERNAL_URL: "http://esgf-solr:8983"
-    depends_on:
-      - esgf-configure
-      - esgf-tomcat
-      - esgf-solr
-#      - esgf-orp
-
   esgf-postgres:
     image: cedadev/esgf-postgres
     build: ./postgres
@@ -123,18 +93,26 @@ services:
     volumes:
       - "postgres-data:/var/lib/pgsql/data"
 
-  esgf-idp-node:
-    image: cedadev/esgf-idp-node
-    build: ./idp-node
-    restart: "no"
-    environment:
+  # Build dependency only
+  esgf-configure:
+    image: cedadev/esgf-configure
+    build: ./configure
+    # Use an entrypoint that exits immediately with success
+    entrypoint: ["true"]
+    # Environment variables required for config files
+    # This uses a YAML anchor so that these are easy to reference elsewhere
+    environment: &config_env
       ESGF_HOSTNAME:
       ESGF_DATABASE_HOST: esgf-postgres
       ESGF_DATABASE_PASSWORD: "dbsuper123"
-    depends_on:
-      - esgf-configure
-      - esgf-tomcat
-      - esgf-postgres
+      ESGF_SOLR_INTERNAL_URL: "http://esgf-solr:8983"
+
+  # Build dependency only
+  esgf-tomcat:
+    image: cedadev/esgf-tomcat
+    build: ./tomcat
+    # Use an entrypoint that exits immediately with success
+    entrypoint: ["true"]
 
   # Build dependency only
   esgf-django:
@@ -143,15 +121,43 @@ services:
     # Use an entrypoint that exits immediately with success
     entrypoint: ["true"]
 
+#  esgf-orp:
+#    image: cedadev/esgf-orp
+#    environment:
+#
+#    depends_on:
+#      - esgf-configure
+#      - esgf-tomcat
+
+  esgf-index-node:
+    image: cedadev/esgf-index-node
+    build: ./index-node
+    restart: "no"
+    environment:
+      <<: *config_env
+    depends_on:
+      - esgf-configure
+      - esgf-tomcat
+      - esgf-solr
+#      - esgf-orp
+
+  esgf-idp-node:
+    image: cedadev/esgf-idp-node
+    build: ./idp-node
+    restart: "no"
+    environment:
+      <<: *config_env
+    depends_on:
+      - esgf-configure
+      - esgf-tomcat
+      - esgf-postgres
+
   esgf-cog:
     image: cedadev/esgf-cog
     build: ./cog
     restart: "no"
     environment:
-      ESGF_HOSTNAME:
-      ESGF_DATABASE_HOST: esgf-postgres
-      ESGF_DATABASE_PASSWORD: "dbsuper123"
-      ESGF_ROOTADMIN_PASSWORD: "rootadmin123"
+      <<: *config_env
       ESGF_COG_TIME_ZONE: "Europe/London"
       ESGF_COG_SECRET_KEY: "djangosecretkeyforcog"
     volumes:
