--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -81,10 +81,6 @@ WSGISocketPrefix run/wsgi
   RequestHeader set SSL_CLIENT_I_DN "%{SSL_CLIENT_I_DN}s"
   RequestHeader set SSL_SERVER_S_DN_OU "%{SSL_SERVER_S_DN_OU}s"
   RequestHeader set SSL_CLIENT_VERIFY "%{SSL_CLIENT_VERIFY}s"
-  
-  # RewriteRules
-  RewriteEngine On
-  RewriteRule ^/visusviewer$ https://%{HTTP_HOST}%{REQUEST_URI}/viewer.html [R]
 
   # proxy requests to Jetty
   ProxyPassMatch  ^/solr(.*)$     http://esgf-solr:8983/solr$1
@@ -107,19 +103,19 @@ WSGISocketPrefix run/wsgi
   # ProxyPassReverse /esgf-desktop  ajp://localhost:8009/esgf-desktop
   # ProxyPass /las  ajp://localhost:8009/las
   # ProxyPassReverse /las   ajp://localhost:8009/las
-  
+
   # proxy requests for slcs resources
   ProxyPass /esgf-slcs http://esgf-slcs:5000 timeout=600
   ProxyPassReverse /esgf-slcs http://esgf-slcs:5000 timeout=600
   ProxyPass /slcs-static http://slcs-nginx timeout=600
   ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
-  
+
   # proxy requests for visus web viewer
-  ProxyPass /visusviewer http://visus-server timeout=600
-  ProxyPassReverse /visusviewer http://visus-server timeout=600
-  ProxyPass /mod_visus http://visus-server/mod_visus timeout=600
-  ProxyPassReverse /mod_visus http://visus-server/mod_visus timeout=600
-  
+  Redirect permanent /visusviewer /visusviewer/
+  Redirect permanent /mod_visus /visusviewer/mod_visus
+  ProxyPass /visusviewer/ http://visus-server/ timeout=600
+  ProxyPassReverse /visusviewer/ http://visus-server/ timeout=600
+
   # Node Manager
   WSGIDaemonProcess esgfnm python-path=/opt/esgf/virtual/python/lib/python2.7/site-packages:/usr/local/esgf-node-manager/src/python/server user=apache group=apache threads=5
   WSGIScriptAlias /esgf-nm /usr/local/esgf-node-manager/src/python/server/nodemgr/apache/wsgi.py
