make slcs image derived from minimal-node

--- a/slcs/Dockerfile
+++ b/slcs/Dockerfile
@@ -1,15 +1,12 @@
 
-from centos:6
+ARG ESGF_IMAGES_HUB=esgfhub
+ARG ESGF_VERSION=devel
+
+FROM $ESGF_IMAGES_HUB/esgf-minimal-node:$ESGF_VERSION
+
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
-# install GPG keys
-RUN rpm --import http://download.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-6
-RUN rpm --import http://vault.centos.org/RPM-GPG-KEY-CentOS-6
-RUN yum history new # That fix the warning 'Warning: RPMDB altered outside of yum'
-
-RUN yum clean all && \
-    yum -y update && \
-    yum -y install wget \
+RUN yum -y install wget \
     git \
     sudo \
     epel-release \
